--- a/src/app/policy/policy.component.css
+++ b/src/app/policy/policy.component.css
@@ -60,3 +60,106 @@
 {
     color:#173E67;
 }
+
+
+ul.step-tree li:hover
+{
+border:2px solid #189EDB;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    margin-left: 20px;
+  }
+
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  input:checked + .slider {
+    background-color: #28a745;
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px #28a745;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+  .icon-help
+  {
+    margin-left: -15px;
+    margin-top: 40px;
+    color:red;
+  }
+
+  .modal-header 
+  {
+      border-bottom: 0px;
+  }
+
+.modal-footer
+{
+    border-top: 0px;
+}
+.save-btn
+{
+    background-color: #FEA519;
+    color: white;
+    border-radius: 20px;
+    width: 100px;
+}
+.p-no-maring-bottom
+{
+    margin-bottom: 0px;
+}
+
+.fixed-div
+{
+    width: 100%;
+    position: fixed;
+    text-align: center;
+    bottom: 50px;
+}
