button issue fixed

--- a/src/app/policy/policy.component.html
+++ b/src/app/policy/policy.component.html
@@ -382,8 +382,11 @@
     </div>
 
   </ng-container>
-
-  <div class="row fixed-div">
+<br>
+<br>
+<br>
+<br>
+  <div class="row">
     <div class="col-1">
 
     </div>
