--- a/src/app/policy/policy.component.css
+++ b/src/app/policy/policy.component.css
@@ -6,9 +6,16 @@
 .btn-custom
 {
     color: #fff;
-    background-color: #FEA519 !important;
-    border-color: #FEA519 !important;
-    border-radius: 1.25rem !important;
+    background-color: #FEA519;
+    border-color: #FEA519 ;
+    border-radius: 1.25rem ;
+}
+
+.disable-class
+{
+    background-color: #BFBFBF;
+    border-color: #BFBFBF;
+    border-radius: 1.25rem;
 }
 
 
@@ -16,7 +23,7 @@
 .btn-group img { margin-right: 10px; }
 .show{padding-top:0px !important;width: 100%;}
 .dropdown-toggle { padding-right: 50px }
-.dropdown-toggle .glyphicon { margin-left: 94px; }
+.dropdown-toggle .glyphicon { margin-left: 75px; }
 .dropdown-menu>li>a:hover { background: #f1f9fd } /* $search-blue */
 .dropdown-header { background: #ccc; font-size: 14px; font-weight: 700; margin-bottom: 5px }
 .dropdown-header-nopadding {padding: 0px !important;color: #4F617F}
@@ -65,6 +72,11 @@
 ul.step-tree li:hover
 {
 border:2px solid #189EDB;
+}
+
+.image-happend-select
+{
+background-color: #189EDB !important;
 }
 
 .switch {
@@ -162,4 +174,21 @@ border:2px solid #189EDB;
     position: fixed;
     text-align: center;
     bottom: 50px;
+}
+
+.image-opacity
+{
+    opacity: 0.4;
+}
+
+.note{
+ color:#d60606;
+}
+
+.image-happend
+{
+    background-color: #173E67 !important; 
+    background-blend-mode: screen;
+    height: 70px;
+    width: 85px;
 }
