--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
   <div class="coursel">
       <div class="text-center">
-          <span>Find the Best Insurance Plan</span>
           <br>
+          <br>            
+          <span>Find the Best Insurance Plan</span>
           <br>
           <br>
           <div>
@@ -11,13 +12,42 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-50" src="../../assets/trim.png" alt="First slide">
+              <div class="row">
+                  <div class="col-3 text-center" style="height: 100px; width: 25px; background-color: #009DDD; margin-left: 45px">
+                      <img style="height:50px;width: 50%; padding: 3px;" src="../../assets/car.png" alt="First slide">
+                      <br>
+                      Car
+                  </div>
+                  <div class="col-3 text-center" style="height: 100px; width: 25px; background-color: #009DDD; margin-left: 5px">
+                      <img  style="height:50px;width: 50%; padding: 3px" src="../../assets/home.png" alt="First slide">
+                      <br>
+                      Home
+                  </div>
+                  <div class="col-3 text-center" style="height: 100px; width: 25px; background-color: #009DDD; margin-left: 5px">
+                      <img  style="height:50px;width: 80%; padding: 3px" src="../../assets/trim.png" alt="First slide">
+                      <br>
+                      Family
+                  </div>
+              </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-50" src="../../assets/car.png" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="../../assets/home.png" alt="Third slide">
+                <div class="row">
+                    <div class="col-3 text-center" style="height: 100px; width: 25px; background-color: #009DDD; margin-left: 40px">
+                        <img style="height:50px;width: 50%; padding: 3px;" src="../../assets/car.png" alt="First slide">
+                        <br>
+                        Car
+                    </div>
+                    <div class="col-3 text-center" style="height: 100px; width: 25px; background-color: #009DDD; margin-left: 5px">
+                        <img  style="height:50px;width: 50%; padding: 3px" src="../../assets/home.png" alt="First slide">
+                        <br>
+                        Home
+                    </div>
+                    <div class="col-3 text-center" style="height: 100px; width: 25px; background-color: #009DDD; margin-left: 5px">
+                        <img  style="height:50px;width: 80%; padding: 3px" src="../../assets/trim.png" alt="First slide">
+                        <br>
+                        Family
+                    </div>
+                </div>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -29,6 +59,9 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
+        <br>
+        <br>
+        <br>
     <div class="text-center">
         <button type="button" class="btn sec-btn">
           Get a Quote
