--- a/src/app/policy/policy.component.html
+++ b/src/app/policy/policy.component.html
@@ -1,6 +1,131 @@
+<ng-container *ngIf="step===0">
+    <div class="coursel">
+      <div class="text-center">
+        <br>
+        <span class="fnt_23">Find the Best Insurance Plan</span>
+        <br>
+        <br>
+        <div>
+  
+        </div>
+      </div>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row">
+              <div class="col-3 text-center coursel_div_first">
+                <img style="height:60px;width: 50%; padding-top: 20px;" src="../../assets/car.png" alt="First slide">
+                <br>
+                Car
+              </div>
+              <div class="col-3 text-center coursel_div">
+                <img style="height:60px;width: 50%; padding-top: 20px" src="../../assets/home.png" alt="First slide">
+                <br>
+                Home
+              </div>
+              <div class="col-3 text-center coursel_div">
+                <img style="height:60px;width: 80%; padding-top: 20px" src="../../assets/trim.png" alt="First slide">
+                <br>
+                Family
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-3 text-center coursel_div_first">
+                <img style="height:60px;width: 50%; padding-top: 20px;" src="../../assets/car.png" alt="First slide">
+                <br>
+                Car
+              </div>
+              <div class="col-3 text-center coursel_div">
+                <img style="height:60px;width: 50%; padding-top: 20px" src="../../assets/home.png" alt="First slide">
+                <br>
+                Home
+              </div>
+              <div class="col-3 text-center coursel_div">
+                <img style="height:60px;width: 80%; padding-top: 20px" src="../../assets/trim.png" alt="First slide">
+                <br>
+                Family
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <br>
+      <div class="text-center">
+        <button type="button" class="btn sec-btn">
+          Get a Quote
+        </button>
+      </div>
+      <br>
+    </div>
+    <br>
+    <div class="text-center">
+      <button type="button" class="btn save-btn" (click)="openpolicy(policyIdent)">
+        <img src="../../assets/inicial_claim.png" alt="Third slide"> &nbsp; Initiate Claim
+      </button>
+    </div>
+    <br>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="carusel_div_home">
+            <img style="height:50%; width:95%" src="../../assets/image_02.jpg" alt="First slide">
+            <br>
+            <div style='color:white'>
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet. 
+            </div>
+            <br>
+            <button type="button" class="course_Img_btn">
+                Initiate CLAIM
+              </button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="carusel_div_home">
+            <img style="height:50%; width:95%" src="../../assets/image_02.jpg" alt="First slide">
+            <br>
+            <div style='color:white'>
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet. 
+            </div>
+            <br>
+            <button type="button" class="course_Img_btn">
+                Initiate CLAIM
+              </button>
+          </div>
+        </div>
+        <div class="carousel-item">
+           <div class="carusel_div_home">
+            <img style="height:50%; width:95%" src="../../assets/image_02.jpg" alt="First slide">
+            <br>
+            <div style='color:white'>
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet. 
+            </div>
+            <br>
+            <button type="button" class="course_Img_btn">
+                Initiate CLAIM
+              </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-container>
 <br>
-
   <ng-container *ngIf="step===1">
+    <div class="pad_lef_rig"> 
     <div class="row">
       <div class="col-md-12">
         <div class="form-group">
@@ -64,11 +189,11 @@
   
       </div>
     </div>
-
+  </div>
   </ng-container>
 
   <ng-container *ngIf="step===2">
-
+<div class="pad_lef_rig">
     <div class="row">
       <div class="col-12">
         <div class="btn-group">
@@ -171,11 +296,12 @@
   
       </div>
     </div>
-
+    </div>
 
   </ng-container>
 
   <ng-container *ngIf="step===3">
+      <div class="pad_lef_rig">
     <span class="subtext-color">
       <b>what has happend</b>
     </span>
@@ -242,11 +368,12 @@
   
       </div>
     </div>
-
+    </div>
 
   </ng-container>
 
   <ng-container *ngIf="step===4">
+      <div class="pad_lef_rig">
     <div class="row">
       <div class="col-md-12">
         <div class="form-group">
@@ -378,10 +505,11 @@
   
       </div>
     </div>
-
+    </div>
   </ng-container>
 
   <ng-container *ngIf="step===5">
+      <div class="pad_lef_rig">
     <div class="row">
       <div class="col-md-12">
         <div class="form-group">
@@ -443,11 +571,12 @@
   
       </div>
     </div>
-
+    </div>
   </ng-container>
 
 
   <ng-container *ngIf="step===6">
+      <div class="pad_lef_rig">
       <div class="row">
         <div class="col-md-12">
           <div class="form-group">
@@ -510,10 +639,11 @@
     
         </div>
       </div>
-  
+      </div>
     </ng-container>
 
     <ng-container *ngIf="step===7">
+        <div class="pad_lef_rig">
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
@@ -577,10 +707,11 @@
                 
           </div>
         </div>
-    
+        </div>
       </ng-container>
   
       <ng-container *ngIf="step===8">
+          <div class="pad_lef_rig">
         <br>
         <br>
         <br>
@@ -602,7 +733,7 @@
        
             </div>
           </div>
-      
+          </div>
         </ng-container>
   <ng-template #content let-modal>
     <div class="modal-body">
@@ -680,3 +811,43 @@
       </div>
       
     </ng-template>
+    <ng-template #policyIdent let-modal>
+        <div class="modal-body">
+          <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <img src="../../assets/close.png">
+          </button>
+          <br>
+          <div class="text-center">
+            <p class="p-no-maring-bottom fnt_20">Please Identify yourself
+            </p>
+            <br>
+            <div>
+              <button type="button" [ngClass]="{ 'btn prm-btn': !isPolicyButton, 'btn prm-btn-sel': isPolicyButton  }"
+                (click)="isPolicyButton = !isPolicyButton; isDriverButton = false; isPassengerButton = false; nextEnable = true">
+                <img *ngIf="!isPolicyButton" src="../../assets/policy_holder.png"> &nbsp;
+                <img *ngIf="isPolicyButton" src="../../assets/policy_holder_selected.png"> &nbsp;
+                POLICY HOLDER
+              </button>
+              <button type="button" [ngClass]="{ 'btn prm-btn': !isDriverButton, 'btn prm-btn-sel': isDriverButton  }"
+                (click)="isDriverButton = !isDriverButton; isPolicyButton = false; isPassengerButton = false; nextEnable = true">
+                <img *ngIf="!isDriverButton" src="../../assets/drriver.png"> &nbsp;
+                <img *ngIf="isDriverButton" src="../../assets/driver_selected.png"> &nbsp;
+                DRIVER
+              </button>
+              <button type="button" [ngClass]="{ 'btn prm-btn': !isPassengerButton, 'btn prm-btn-sel': isPassengerButton  }"
+                (click)="isPassengerButton = !isPassengerButton; isDriverButton = false; isPolicyButton = false; nextEnable = true">
+                <img *ngIf="!isPassengerButton" src="../../assets/passanger.png"> &nbsp;
+                <img *ngIf="isPassengerButton" src="../../assets/passanger_selected.png"> &nbsp;
+                PASSENGER
+              </button>
+            </div>
+            <br>
+            <div>
+              <button type="button" class="btn next-btn"
+                [ngClass]="{ 'btn next-btn': !nextEnable, 'btn next-btn_enable': nextEnable  }" (click)="next();modal.dismiss('Cross click')">
+                Next
+              </button>
+            </div>
+          </div>
+        </div>
+      </ng-template>
